[package]
name = "ccase"
version = "0.5.1"
authors = ["rutrum <dave@rutrum.net>"]
edition = "2021"
description = "Command line interface to convert strings into any case"
license = "MIT"
keywords = [ "casing", "case", "string" ]
categories = [ "text-processing", "command-line-utilities" ]
readme = "README.md"
repository = "https://github.com/stringcase/ccase"
documentation = "https://github.com/stringcase/ccase"

[[bin]]
name = "ccase"
path = "src/main.rs"

[dependencies]
convert_case = "0.11"
convert_case_extras = { version = "0.2", features = ["random"] }
clap = { version = "^4.0", features = ["cargo", "color", "wrap_help", "derive"] }

[dev-dependencies]
predicates = "2.1.1"
assert_cmd = "2.0"
